# c-game

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  game
include/: draw.h  game.h  sdlstuff.h  types.h
src/: draw.c  game.c  main.c  sdlstuff.c
